crates/compiler/cypress/tests/snapshots/test_parse__one_backpassing_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "# leading comment\nx <- (\\y -> y)\n\nx\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginBackpassing
            Ident=>LowerIdent@0
            InlineBackArrow=>OpBackArrow@1
            (BeginParens
                (BeginLambda
                    Ident=>LowerIdent@4
                    InlineLambdaArrow=>OpArrow@5
                    Ident=>LowerIdent@6
                EndLambda)
            EndParens)
        EndBackpassing)
        HintExpr
        Ident=>LowerIdent@8
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Backpassing([Ident("x")], Lambda([Ident("y")], Ident("y")))
Ident("x")

[=== formatted below ===]

