crates/compiler/cypress/tests/snapshots/test_parse__one_char_string_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\"x\"\n\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("\"x\"")

[=== formatted below ===]

