crates/compiler/cypress/tests/snapshots/test_parse__one_def_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "# leading comment\nx=5\n\n42\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            Num=>Int@2
        EndAssignDecl)
        HintExpr
        Num=>Int@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), IntBase10("5"))
IntBase10("42")

[=== formatted below ===]

