crates/compiler/cypress/tests/snapshots/test_parse__one_minus_two_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "1 - 2\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Num=>Int@0
            InlineBinOpMinus=>OpBinaryMinus@1
            Num=>Int@2
        EndBinOpMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("1"), Minus, IntBase10("2"))

[=== formatted below ===]

