crates/compiler/cypress/tests/snapshots/test_parse__one_plus_two_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "1+2\n"
---
(BeginFile
    (BeginTopLevelDecls
        (* HintExpr Num=>Int@0 InlineBinOpPlus=>OpPlus@1 Num=>Int@2 EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("1"), Plus, IntBase10("2"))

[=== formatted below ===]

